# Image-Harvester

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
src/image_harvester/: __init__.py  __main__.py  cli.py  config.py  downloader.py  models.py  naming.py  parser.py  pipeline.py  sequence.py  state.py
src/image_harvester/fetchers/: __init__.py  base.py  playwright_fetcher.py  requests_fetcher.py
src/image_harvester/tui/: __init__.py  app.py  forms.py  services.py  widgets.py
tests/: conftest.py  test_cli_i18n.py  test_config.py  test_parser_and_naming.py  test_pipeline_flow.py  test_sequence.py  test_state_resume.py  test_tui_form_validation.py  test_tui_snapshot_service.py  test_tui_worker.py
